npm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: npm
  name: npm
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: npm
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/docker_laboratory_net: "true"
        io.kompose.service: npm
    spec:
      containers:
        - command:
            - npm
          image: npm
          name: laboratory-npm
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: npm-claim0
          workingDir: /var/www/html
      restartPolicy: Always
      volumes:
        - name: npm-claim0
          persistentVolumeClaim:
            claimName: npm-claim0
status: {}
